--- a/MiniShopApp/Components/Pages/Home.razor
+++ b/MiniShopApp/Components/Pages/Home.razor
@@ -1,7 +1,14 @@
 ﻿@page "/"
 
 <PageTitle>Home</PageTitle>
+@foreach(var item in products)
+{
+    <div class="product-item">
+        <h3>@item.ProductCode</h3>
+        <p>@item.ProductName</p>
+        <p>Price: @item.Price?.ToString("c2")</p>
+    </div>
+}
+)
 
-<h1>Hello, world!</h1>
 
-Welcome to your new app.
