--- a/MiniShopApp/Components/Layout/NavMenu.razor
+++ b/MiniShopApp/Components/Layout/NavMenu.razor
@@ -1,22 +1,24 @@
-﻿<nav class="navbar navbar-expand-lg bg-body-tertiary">
+﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        
-        <div class="collapse navbar-collapse " id="navbarSupportedContent">
-            <ul class="nav justify-content-center">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Active</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                </li>
-            </ul>
-            
-        </div>
+        <a class="navbar-brand" href="">BlazorApp1</a>
     </div>
-</nav>
+</div>
+
+<input type="checkbox" title="Navigation menu" class="navbar-toggler" />
+
+<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
+    <nav class="nav flex-column">
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link"  href="/products/create">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Product
+            </NavLink>
+        </div>
+
+    </nav>
+</div>
