--- a/MiniShopApp/Pages/Products/ProductIndexPage.razor
+++ b/MiniShopApp/Pages/Products/ProductIndexPage.razor
@@ -24,6 +24,12 @@
         
        
     </div>
+
+    <br />
+    <div class="d-flex justify-content-center">
+        <NavLink class="btn btn-primary" href="/products/create">Create Product</NavLink>
+
+    </div>
 </div>
 
 
