--- a/MiniShopApp/_Imports.razor
+++ b/MiniShopApp/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using MiniShopApp
 @using MiniShopApp.Components
+@using MiniShopApp.Data
+@using MiniShopApp.Components.Layout
