--- a/MiniShopApp/Components/Layout/MainLayout2.razor
+++ b/MiniShopApp/Components/Layout/MainLayout2.razor
@@ -1,26 +1,28 @@
 ﻿@inherits LayoutComponentBase
 @attribute [StreamRendering(false)]
 
-<div class="container-fluid">
-    <div>
+    <div class="sticky-top bg-body-secondary">
+
         <ul class="nav justify-content-between">
             <li class="nav-item">
-                <NavLink class="nav-link" aria-current="page" href="/products">Products</NavLink>
+                <NavLink class="nav-link" aria-current="page" href="/orders">Products</NavLink>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
+                <NavLink class="nav-link" href="/order/services">Services</NavLink>
             </li>
+           
             <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <NavLink class="nav-link" href="/order/about">About</NavLink>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-            </li>
-            
+
         </ul>
     </div>
+
+
+<div class="container-fluid">
+    
     <main>
-        <article class="content px-4">
+        <article class="content">
             @Body
         </article>
     </main>
