--- a/MiniShopApp/Components/Layout/NavMenu.razor
+++ b/MiniShopApp/Components/Layout/NavMenu.razor
@@ -15,8 +15,13 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link"  href="/products/create">
+            <NavLink class="nav-link"  href="/products">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Product
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/categories">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Category
             </NavLink>
         </div>
 
