--- a/MiniShopApp/Pages/Products/ProductCreatePage.razor
+++ b/MiniShopApp/Pages/Products/ProductCreatePage.razor
@@ -1,9 +1,9 @@
 ﻿@page "/products/create"
 @using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
-@using MiniShopApp.Components.Layout
-@using MiniShopApp.Data
+
+
 @rendermode InteractiveServer
-@layout MainLayout2
+@layout MainLayout
 @inject UserState userState
 
 
