--- a/MiniShopApp/Pages/Orders/OrderIndex.razor
+++ b/MiniShopApp/Pages/Orders/OrderIndex.razor
@@ -1,47 +1,50 @@
-﻿@page "/orders"
-@layout MainLayout2
-@rendermode InteractiveServer
-<PageTitle>Products</PageTitle>
-<div>
-    <div class="my-2">
-        <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Search here..." aria-label="Search here..." aria-describedby="button-addon2">
-            <button class="btn btn-outline-secondary" type="button" id="button-addon2"><i class="bi bi-search"></i></button>
-        </div>
-    </div>
-    <div class="row row-cols-3 row-cols-md-6 g-2">
-        @foreach (var list in _products)
-        {
-            <div class="col">
-                <div class="card h-100">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">@list?.ProductName</h5>
-                        <p class="card-text small">@list?.Decription</p>
-                    </div>
-                    <div class="d-flex justify-content-between">
-                        <button class="btn btn-sm btn-primary">Add</button>
-                    </div>
-                </div>
+﻿
+@page "/orders"  
+@using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
+@layout MainLayout2  
+@rendermode InteractiveServer  
 
-            </div>
-        }
+<PageTitle>Products</PageTitle>  
+<div>  
+    @* <p>Id: @customerId</p> *@
+    <div class="my-2">  
+        <div class="input-group mb-3">  
+            <input type="text"  
+                   class="form-control"  
+                   value="@_filter"  
+                   @oninput="@((e) => OnSearch(e))"  
+                   placeholder="Search here..."  
+                   aria-label="Search here..."  
+                   aria-describedby="button-addon2"
+                   />  
+            <button class="btn btn-outline-secondary" type="button" id="button-addon2"><i class="bi bi-search"></i></button>  
+        </div>  
+    </div>  
+    <div class="row row-cols-3 row-cols-md-6 g-2">  
+        @foreach (var list in _products)  
+        {  
+            <div class="col">  
+                <div class="card h-100">  
+                    <img src="..." class="card-img-top" alt="...">  
+                    <div class="card-body">  
+                        <h5 class="card-title">@list?.ProductName</h5>  
+                        <p class="card-text small">@list?.Decription</p>  
+                    </div>  
+                    <div class="d-flex justify-content-between">  
+                        <button class="btn btn-sm btn-primary">Add</button>  
+                    </div>  
+                </div>  
 
+            </div>  
+        }  
+    </div>  
 
-    </div>
+    <br />  
 
-    <br />
-    
-    <div class="fixed-bottom">
-       
-        <div class="d-grid gap-2">
-            <button class="btn btn-primary">Place Order</button>
-        </div>
-    </div>
-    
-    
-</div>
+    <div class="fixed-bottom">  
 
-
-
-
+        <div class="d-grid gap-2">  
+            <button class="btn btn-primary" @onclick="GetCustomerData">Place Order</button>  
+        </div>  
+    </div>  
+</div> 
