--- a/MiniShopApp/Components/Layout/MainLayout2.razor
+++ b/MiniShopApp/Components/Layout/MainLayout2.razor
@@ -1,5 +1,6 @@
 ﻿@inherits LayoutComponentBase
 @attribute [StreamRendering(false)]
+<RadzenComponents @rendermode="@InteractiveServer" />
 
     <div class="sticky-top bg-body-secondary">
 
