--- a/MiniShopApp/Components/App.razor
+++ b/MiniShopApp/Components/App.razor
@@ -12,13 +12,27 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <ImportMap />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <HeadOutlet />
+    <HeadOutlet @rendermode="RenderModeForPage" />
+    <RadzenTheme Theme="material" @rendermode="InteractiveServer" />
+
 </head>
 
 <body>
-    <Routes />
+    <Routes @rendermode="RenderModeForPage"/>
     <script src="_framework/blazor.web.js"></script>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+    <script src="@Assets["_content/Radzen.Blazor/Radzen.Blazor.js?v=@(typeof(Radzen.Colors).Assembly.GetName().Version)"]"></script>
+
 </body>
 
 </html>
+
+@code{
+    [CascadingParameter]
+    private HttpContext HttpContext { get; set; } = default!;
+
+    private IComponentRenderMode? RenderModeForPage => HttpContext.Request.Path.StartsWithSegments("/")
+       ? null
+       : new InteractiveServerRenderMode(false);
+}
