--- a/MiniShopApp/Components/Layout/MainLayout.razor
+++ b/MiniShopApp/Components/Layout/MainLayout.razor
@@ -1,8 +1,5 @@
-﻿
-
-@inherits LayoutComponentBase
+﻿@inherits LayoutComponentBase
 @attribute [StreamRendering(false)]
-<RadzenComponents @rendermode="@InteractiveServer" />
 <RadzenLayout>
     <RadzenHeader>
         <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center" Gap="0">
@@ -10,7 +7,7 @@
             <RadzenLabel Text="Header" />
         </RadzenStack>
     </RadzenHeader>
-    <RadzenSidebar Responsive="false" Style="width: max-content">
+    <RadzenSidebar @bind-Expanded="@sidebarExpanded">
         <RadzenPanelMenu DisplayStyle="@(sidebarExpanded? MenuItemDisplayStyle.IconAndText: MenuItemDisplayStyle.Icon)" ShowArrow="false">
             <RadzenPanelMenuItem Text="Home" Icon="home" />
             <RadzenPanelMenuItem Text="Dashboard" Icon="dashboard" />
@@ -21,7 +18,7 @@
         </RadzenPanelMenu>
     </RadzenSidebar>
     <RadzenBody>
-        <div class="">
+        <div class="content">
             @Body
         </div>
     </RadzenBody>
@@ -31,5 +28,5 @@
 </RadzenLayout>
 
 @code {
-    bool sidebarExpanded = true;
+    bool sidebarExpanded = false;
 }
