--- a/MiniShopApp/Pages/Products/ProductCreatePage.razor
+++ b/MiniShopApp/Pages/Products/ProductCreatePage.razor
@@ -32,7 +32,7 @@
         </div>
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Description</label>
-            <textarea class="form-control" @bind="@model.Decription" />
+            <textarea class="form-control" @bind="@model.Description" />
             
         </div>
        
