--- a/MiniShopApp/Pages/Products/ProductIndexPage.razor
+++ b/MiniShopApp/Pages/Products/ProductIndexPage.razor
@@ -32,7 +32,7 @@
                     <td>@list?.ProductName</td>
                     <td>@list?.Price</td>
                     <td>@list?.SubPrice</td>
-                    <td>@list?.CatgoryId</td>
+                    <td>@list?.CategoryId</td>
                     <td>@list?.IsActive</td>
                     <td>@list?.ImageUrl</td>
                     <td>
