--- a/MiniShopApp/Pages/Orders/OrderIndex.razor
+++ b/MiniShopApp/Pages/Orders/OrderIndex.razor
@@ -17,21 +17,32 @@
                    aria-label="Search here..."  
                    aria-describedby="button-addon2"
                    />  
-            <button class="btn btn-outline-secondary" type="button" id="button-addon2"><i class="bi bi-search"></i></button>  
+            <button class="btn btn-outline-secondary" @onclick="OnGetSearchRefresh" type="button" id="button-addon2"><i class="bi bi-search"></i></button>  
         </div>  
     </div>  
     <div class="row row-cols-3 row-cols-md-6 g-2">  
         @foreach (var list in _products)  
         {  
             <div class="col">  
-                <div class="card h-100">  
+
+                <div class="card h-100">
+                    <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                        9
+                        <span class="visually-hidden">unread messages</span>
+                    </span>
                     <img src="..." class="card-img-top" alt="...">  
                     <div class="card-body">  
-                        <h5 class="card-title">@list?.ProductName</h5>  
-                        <p class="card-text small">@list?.Decription</p>  
+                        <h6 class="card-title">@list?.ProductName</h6>
+                        <h5 class="card-text text-danger">@String.Format("${0:N2}", list?.Price)</h5>
                     </div>  
-                    <div class="d-flex justify-content-between">  
-                        <button class="btn btn-sm btn-primary">Add</button>  
+                    <div class="d-flex justify-content-between"> 
+ 
+                        <button class="btn btn-sm btn-primary" @onclick="@(() => AddProduct(list!.Id))">-</button>
+                        <button class="btn btn-sm btn-primary" @onclick="@(() => AddProduct(list!.Id))">Add</button>
+                    }
+
+                        
+                        
                     </div>  
                 </div>  
 
@@ -39,8 +50,28 @@
         }  
     </div>  
 
-    <br />  
 
+        <table class="table table-striped">  
+            <thead>  
+                <tr>  
+                    <th scope="col">Product Name</th>  
+                    <th scope="col">Quantity</th>  
+                    <th scope="col">Price</th>  
+                    <th scope="col">Total Price</th>  
+                </tr>  
+            </thead>  
+            <tbody>  
+                @foreach (var item in orderDetails)  
+                {  
+                    <tr>  
+                        <td>@item.ItemName</td>  
+                        <td>@item.Quantity</td>  
+                        <td>@item.Price</td>  
+                        <td>@item.TotalPrice</td>  
+                    </tr>
+                }
+            </tbody>
+            </table>
     <div class="fixed-bottom">  
 
         <div class="d-grid gap-2">  
