--- a/MiniShopApp/Pages/Orders/OrderViewPage.razor
+++ b/MiniShopApp/Pages/Orders/OrderViewPage.razor
@@ -2,3 +2,7 @@
 @layout MainLayout
 <PageTitle>Views Order</PageTitle>
 
+<div>
+    <a class="btn btn-primary mb-3" href="/orders">Create Order</a>
+</div>
+
