--- a/MiniShopApp/Pages/Orders/OrderIndex.razor
+++ b/MiniShopApp/Pages/Orders/OrderIndex.razor
@@ -27,7 +27,7 @@
 
                 <div class="card h-100">
                     <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                        9
+                        @list?.QTYIncrease
                         <span class="visually-hidden">unread messages</span>
                     </span>
                     <img src="..." class="card-img-top" alt="...">  
@@ -35,14 +35,10 @@
                         <h6 class="card-title">@list?.ProductName</h6>
                         <h5 class="card-text text-danger">@String.Format("${0:N2}", list?.Price)</h5>
                     </div>  
-                    <div class="d-flex justify-content-between"> 
- 
-                        <button class="btn btn-sm btn-primary" @onclick="@(() => AddProduct(list!.Id))">-</button>
-                        <button class="btn btn-sm btn-primary" @onclick="@(() => AddProduct(list!.Id))">Add</button>
-                    }
+                    <div class="d-flex justify-content-between">
+                        <RadzenButton class="btn btn-sm btn-primary" Visible=true Click="@(() => DescreasProduct(list!.Id))">-</RadzenButton>
 
-                        
-                        
+                        <RadzenButton class="btn btn-sm btn-primary" Visible=true Click="@(() => AddProduct(list!.Id))">+</RadzenButton>
                     </div>  
                 </div>  
 
@@ -51,31 +47,59 @@
     </div>  
 
 
-        <table class="table table-striped">  
-            <thead>  
-                <tr>  
-                    <th scope="col">Product Name</th>  
-                    <th scope="col">Quantity</th>  
-                    <th scope="col">Price</th>  
-                    <th scope="col">Total Price</th>  
-                </tr>  
-            </thead>  
-            <tbody>  
-                @foreach (var item in orderDetails)  
-                {  
-                    <tr>  
-                        <td>@item.ItemName</td>  
-                        <td>@item.Quantity</td>  
-                        <td>@item.Price</td>  
-                        <td>@item.TotalPrice</td>  
-                    </tr>
-                }
-            </tbody>
-            </table>
+        
     <div class="fixed-bottom">  
 
-        <div class="d-grid gap-2">  
-            <button class="btn btn-primary" @onclick="GetCustomerData">Place Order</button>  
+        <div class="d-flex justify-content-between gap-2">  
+            <button class="btn btn-secondary w-25" data-bs-toggle="modal" data-bs-target="#exampleModal" @onclick="GetViewOrder">View Order @orderDetails.Count()</button>
+            <button class="btn btn-primary w-75" @onclick="GetCustomerData">Place Order</button>  
         </div>  
     </div>  
 </div> 
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Order lists</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+               <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th scope="col">Product Name</th>
+                            <th scope="col">Quantity</th>
+                            <th scope="col">Price</th>
+                            <th scope="col">Total Price</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in orderDetails)
+                        {
+                            <tr>
+                                <td>@item.ItemName</td>
+                                <td>@item.Quantity</td>
+                                <td>@item.Price</td>
+                                <td>@item.TotalPrice</td>
+                            </tr>
+                        }
+                        
+                    </tbody>
+                    <tbody>
+                        <tr class="table-active">
+                            <th></th>
+                            <th>@orderDetails.Sum(x => x.Quantity)</th>
+                            <th>@orderDetails.Sum(x => x.Price)</th>
+                            <th>@orderDetails.Sum(x => x.TotalPrice)</th>
+                        </tr>
+                    </tbody>
+               </table>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+               
+            </div>
+        </div>
+    </div>
+</div>
