--- a/MiniShopApp/Pages/Orders/OrderViewPage.razor
+++ b/MiniShopApp/Pages/Orders/OrderViewPage.razor
@@ -3,6 +3,6 @@
 <PageTitle>Views Order</PageTitle>
 
 <div>
-    <a class="btn btn-primary mb-3" href="/orders">Create Order</a>
+    <a class="btn btn-primary mb-3" href="/index">Create Order</a>
 </div>
 
