--- a/MiniShopApp/Pages/Orders/OrderIndex.razor
+++ b/MiniShopApp/Pages/Orders/OrderIndex.razor
@@ -26,19 +26,24 @@
             <div class="col">  
 
                 <div class="card h-100">
-                    <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                        @list?.QTYIncrease
-                        <span class="visually-hidden">unread messages</span>
-                    </span>
+                    @if(list?.QTYIncrease > 0)  
+                    {  
+                        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">  
+                            @list?.QTYIncrease  
+                            <span class="visually-hidden">unread messages</span>  
+                        </span>
+                    }
+    
+                    
                     <img src="..." class="card-img-top" alt="...">  
                     <div class="card-body">  
                         <h6 class="card-title">@list?.ProductName</h6>
                         <h5 class="card-text text-danger">@String.Format("${0:N2}", list?.Price)</h5>
                     </div>  
-                    <div class="d-flex justify-content-between">
-                        <RadzenButton class="btn btn-sm btn-primary" Visible=true Click="@(() => DescreasProduct(list!.Id))">-</RadzenButton>
+                    <div class="d-flex justify-content-between mx-2 my-2">
+                        <RadzenButton class="btn btn-sm btn-primary" Size=ButtonSize.ExtraSmall Visible=true Click="@(() => DescreasProduct(list!.Id))" Icon="remove"></RadzenButton>
 
-                        <RadzenButton class="btn btn-sm btn-primary" Visible=true Click="@(() => AddProduct(list!.Id))">+</RadzenButton>
+                        <RadzenButton class="btn btn-sm btn-primary" Size=ButtonSize.ExtraSmall Visible=true Click="@(() => AddProduct(list!.Id))" Icon="add"></RadzenButton>
                     </div>  
                 </div>  
 
@@ -52,7 +57,7 @@
 
         <div class="d-flex justify-content-between gap-2">  
             <button class="btn btn-secondary w-25" data-bs-toggle="modal" data-bs-target="#exampleModal" @onclick="GetViewOrder">View Order @orderDetails.Count()</button>
-            <button class="btn btn-primary w-75" @onclick="GetCustomerData">Place Order</button>  
+            <button class="btn btn-primary w-75" @onclick="PlaceOrderAsync">Place Order</button>
         </div>  
     </div>  
 </div> 
