--- a/MiniShopApp/Components/Routes.razor
+++ b/MiniShopApp/Components/Routes.razor
@@ -1,5 +1,4 @@
-﻿
-<CascadingAppState>
+﻿<CascadingAppState>
     <Router AppAssembly="typeof(Program).Assembly">
         <Found Context="routeData">
             <RouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)" />
@@ -7,4 +6,3 @@
         </Found>
     </Router>
 </CascadingAppState>
-
