--- a/MiniShopApp/Pages/Lists/TbTables/TableIndex.razor
+++ b/MiniShopApp/Pages/Lists/TbTables/TableIndex.razor
@@ -1,5 +1,15 @@
-﻿<h3>TableIndex</h3>
+﻿@page "/table"
+@inject NotificationService NotificationService
 
-@code {
 
-}
+<h3>TableIndex</h3>
+
+
+<div class="rz-p-12 rz-text-align-end">
+    <RadzenButton Text="Show notification at custom position"
+                  Click=@(args => ShowNotification(new NotificationMessage { Style = "position: absolute; inset-inline-start: -1000px;", Severity = NotificationSeverity.Success, Summary = "Success Summary", Detail = "Success Detail", Duration = 4000 })) />
+</div>
+
+
+
+
