--- a/MiniShopApp/Components/Layout/MainLayout2.razor
+++ b/MiniShopApp/Components/Layout/MainLayout2.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 @attribute [StreamRendering(false)]
-
+<RadzenNotification @rendermode="RenderMode.InteractiveServer"/>
     <div class="sticky-top bg-body-secondary">
 
         <ul class="nav justify-content-between">
