--- a/MiniShopApp/Pages/Products/ProductCreatePage.razor
+++ b/MiniShopApp/Pages/Products/ProductCreatePage.razor
@@ -1,5 +1,6 @@
 ﻿@page "/products/create"
 @using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
+@using MiniShopApp.Data.TelegramStore
 
 
 @rendermode InteractiveServer
