--- a/MiniShopApp/Pages/Index.razor
+++ b/MiniShopApp/Pages/Index.razor
@@ -6,7 +6,7 @@
 
 
 <PageTitle>Home</PageTitle>
-@* <p>Id @userId</p> *@
+<p>Id @userId</p>
 <div class="">
     @if (userId<=0 || userId==null)
     {
