--- a/MiniShopApp/Pages/Lists/TbTables/CreateTable.razor
+++ b/MiniShopApp/Pages/Lists/TbTables/CreateTable.razor
@@ -1,4 +1,17 @@
 ﻿@page "/table/create"
-<h3>CreateTable</h3>
+<form>
+    <div class="mb-2">
+        <label class="form-label" for="name">Table Code</label>
+        <input type="text" id="name" class="form-control"/>
+    </div>
+    <div class="mb-2">
+        <label class="form-label" for="desc">Descriptions</label>
+        <textarea type="text" id="desc" class="form-control" />
+    </div>
+</form>
+<div class="d-flex justify-content-end">
+    <button class="btn btn-primary">Save</button>
+    <button class="btn btn-danger">Cancel</button>
+</div>
 
 
