--- a/MiniShopApp/Pages/Lists/TbTables/TableIndex.razor
+++ b/MiniShopApp/Pages/Lists/TbTables/TableIndex.razor
@@ -1,5 +1,7 @@
 ﻿@page "/table"
 @inject NotificationService NotificationService
+@inject DialogService DialogService
+@inject IJSRuntime JSRuntime
 
 
 <h3>TableIndex</h3>
@@ -13,7 +15,7 @@
 
 <div>
     <div class="d-flex justify-content-end mb-2">
-        <NavLink class="btn btn-primary" href="#">Create Table</NavLink>
+        <button class="btn btn-primary" onclick="@Createtable">Create Table</button>
     </div>
     <table class="table caption-top table-bordered table-hover table-responsive">
         <thead>
