--- a/MiniShopApp/Pages/Settings/AboutIndex.razor
+++ b/MiniShopApp/Pages/Settings/AboutIndex.razor
@@ -2,8 +2,21 @@
 @rendermode InteractiveServer
 @layout MainLayout2
 <PageTitle>About</PageTitle>
-
-<h3>About us
-</h3>
-
+<div>
+    <h4 class="mb-3">About our app</h4>
+    <p class="mb-2">We are developing a web application integrated with the Telegram Mini App platform, 
+        designed to streamline online ordering for restaurants and food vendors. 
+        While currently in testing, the app already supports essential features like menu browsing and placing orders. 
+        We’re actively refining performance and fixing minor issues to ensure a smooth and engaging experience for users within Telegram.</p>
+    <p>Our goal is to provide a seamless and efficient ordering experience, allowing users to easily navigate menus and place orders directly through Telegram.</p>
+    <div class="mt-3">
+        <h5>>Our App:</h5>
+        <ul>
+            <li>Supports menu browsing and order placement</li>
+            <li>Integrated with Telegram Mini App platform</li>
+            <li>Currently in testing phase</li>
+            <li>Focused on performance improvements and bug fixes</li>
+        </ul>
+    </div>
+</div>
 
