--- a/MiniShopApp/Components/Layout/MainLayout2.razor
+++ b/MiniShopApp/Components/Layout/MainLayout2.razor
@@ -9,7 +9,7 @@
                 <NavLink class="nav-link" aria-current="page" href="/orders">Products</NavLink>
             </li>
             <li class="nav-item">
-                <NavLink class="nav-link" href="/order/services">Services</NavLink>
+                <NavLink class="nav-link" href="/order/histories">History</NavLink>
             </li>
            
             <li class="nav-item">
