--- a/MiniShopApp/Pages/Index.razor
+++ b/MiniShopApp/Pages/Index.razor
@@ -1,29 +1,30 @@
 ﻿@page "/Index"
 @using MiniShopApp.Data.TelegramStore
 @rendermode InteractiveServer
-
 @layout EmptyLayout
 
 
-<PageTitle>Home</PageTitle>
+<PageTitle>Index</PageTitle>
 @* <p>Id @userId</p> *@
 <div class="">
     @if (userId>0 && userId!=null)
     {
-        <div class="text-center my-4">
+        <div class="text-center">
             <img src="/images/minilogo.jpg" alt="MiniShopApp Logo" class="img-fluid" style="max-width: 200px;" />
             <h1 class="mb-4">Welcome to Mini Order! </h1>
             <p>This is a simple application to demonstrate basic features.</p>
             <p>Use the navigation menu to explore the app.</p>
-            <p class="mt-3">Check out the <NavLink class="btn btn-outline-secondary" href="/orders">Check Order</NavLink> page to view order.</p>
+            <p class="mt-3">Check out the</p> 
+            <NavLink class="btn btn-outline-secondary" href="/orders">Check Order</NavLink> 
+            <p>page to view order.</p>
         </div>
     }
     else
     {
-        <div class="alert alert-warning d-flex align-items-center" role="alert">
+        <div class="alert alert-warning d-flex align-items-center text-center" role="alert">
 
             <div>
-                We couldn't find your information. Please refresh bot /start again to access the application features. Thank you for your patien!!!
+                We couldn't find your information. Please refresh bot by sending command /start again to access the application features. Thank you for your patien!!!
             </div>
         </div>
         <div class="text-center">
