--- a/MiniShopApp/Pages/Lists/TbTables/CreateTable.razor
+++ b/MiniShopApp/Pages/Lists/TbTables/CreateTable.razor
@@ -2,15 +2,15 @@
 <form>
     <div class="mb-2">
         <label class="form-label" for="name">Table Code</label>
-        <input type="text" id="name" class="form-control"/>
+        <input type="text" id="name" class="form-control" @bind="model.TableNumber"/>
     </div>
     <div class="mb-2">
         <label class="form-label" for="desc">Descriptions</label>
-        <textarea type="text" id="desc" class="form-control" />
+        <textarea type="text" id="desc" class="form-control" @bind="model.Description"/>
     </div>
 </form>
 <div class="d-flex justify-content-end">
-    <button class="btn btn-primary">Save</button>
+    <button class="btn btn-primary" onclick="@SaveTable">Save</button>
     <button class="btn btn-danger">Cancel</button>
 </div>
 
