--- a/MiniShopApp/Pages/Lists/TbTables/TableIndex.razor
+++ b/MiniShopApp/Pages/Lists/TbTables/TableIndex.razor
@@ -9,7 +9,7 @@
 
 <div>
     <div class="d-flex justify-content-end mb-2">
-        <a href="/table/creat" class="btn  btn-primary">Create</a>
+        <a href="/table/create" class="btn  btn-primary">Create</a>
     </div>
     <table class="table caption-top table-bordered table-hover table-responsive">
         <thead>
