--- a/MiniShopApp/Pages/Orders/OrderIndex.razor
+++ b/MiniShopApp/Pages/Orders/OrderIndex.razor
@@ -41,9 +41,9 @@
                         <h5 class="card-text text-danger">@String.Format("${0:N2}", list?.Price)</h5>
                     </div>  
                     <div class="d-flex justify-content-between mx-2 my-2">
-                        <RadzenButton class="btn btn-sm btn-primary" Size=ButtonSize.ExtraSmall Visible=true Click="@(() => DescreasProduct(list!.Id))" Icon="remove"></RadzenButton>
+                        <button class="btn btn-sm btn-primary btn-sm" @onclick="@(() => DescreasProduct(list!.Id))" >-</button>
 
-                        <RadzenButton class="btn btn-sm btn-primary" Size=ButtonSize.ExtraSmall Visible=true Click="@(() => AddProduct(list!.Id))" Icon="add"></RadzenButton>
+                        <button class="btn btn-sm btn-primary btn-sm" @onclick="@(() => AddProduct(list!.Id))" >+</button>
                     </div>  
                 </div>  
 
@@ -56,8 +56,8 @@
     <div class="fixed-bottom">  
 
         <div class="d-flex justify-content-between gap-2">  
-            <button class="btn btn-secondary w-25" data-bs-toggle="modal" data-bs-target="#exampleModal" @onclick="GetViewOrder">View Order @orderDetails.Count()</button>
-            <button class="btn btn-primary w-75" @onclick="PlaceOrderAsync">Place Order</button>
+            <button class="btn btn-secondary w-auto" data-bs-toggle="modal" data-bs-target="#exampleModal" @onclick="GetViewOrder">View Order @orderDetails.Count()</button>
+            <button class="btn btn-primary w-50" @onclick="PlaceOrderAsync">Place Order</button>
         </div>  
     </div>  
 </div> 
