--- a/MiniShopApp/_Imports.razor
+++ b/MiniShopApp/_Imports.razor
@@ -10,13 +10,9 @@
 @using MiniShopApp.Components
 @using MiniShopApp.Data
 @using MiniShopApp.Components.Layout
-@using Radzen
-@using Radzen.Blazor
 @using MiniShopApp.Shared
-
-
-@inject NotificationService NotificationService
-@inject DialogService DialogService
+@using MudBlazor
+@using MudBlazor.Services
+@inject IDialogService DialogService
 @inject NavigationManager NavigationManager
-@inject ContextMenuService ContextMenuService
-@inject TooltipService tooltipService
+
