--- a/MiniShopApp/Components/Layout/MainLayout2.razor
+++ b/MiniShopApp/Components/Layout/MainLayout2.razor
@@ -1,7 +1,13 @@
 ﻿@inherits LayoutComponentBase
 @attribute [StreamRendering(false)]
-<RadzenNotification @rendermode="RenderMode.InteractiveServer"/>
-<RadzenDialog @rendermode="RenderMode.InteractiveServer"/>
+
+@* Required *@
+<MudThemeProvider />
+<MudPopoverProvider />
+@* Needed for dialogs *@
+<MudDialogProvider />
+@* Needed for snackbars *@
+<MudSnackbarProvider />
     <div class="sticky-top bg-body-secondary">
 
         <ul class="nav justify-content-between">
