complete new layout use

--- a/MiniShopApp/Components/Layout/MainLayout.razor
+++ b/MiniShopApp/Components/Layout/MainLayout.razor
@@ -64,8 +64,10 @@
             </MudNavMenu>
         </MudPaper>
     </MudDrawer>
-    <MudMainContent Class="container-fluid mt-3">
-        @Body
+    <MudMainContent Class="mt-3">
+        <div class="container-fluid">
+            @Body
+        </div>
     </MudMainContent>
 </MudLayout>
 @code {
