--- a/MiniShopApp/Pages/Lists/TbTables/CreateTable.razor
+++ b/MiniShopApp/Pages/Lists/TbTables/CreateTable.razor
@@ -1,17 +1,26 @@
 ﻿@page "/table/create"
-<form>
-    <div class="mb-2">
-        <label class="form-label" for="name">Table Code</label>
-        <input type="text" id="name" class="form-control" @bind="model.TableNumber"/>
-    </div>
-    <div class="mb-2">
-        <label class="form-label" for="desc">Descriptions</label>
-        <textarea type="text" id="desc" class="form-control" @bind="model.Description"/>
-    </div>
-</form>
-<div class="d-flex justify-content-end">
-    <button class="btn btn-primary" onclick="@SaveTable">Save</button>
-    <button class="btn btn-danger">Cancel</button>
-</div>
+
+@* <div class="d-flex justify-content-end"> *@
+@*     <button class="btn btn-primary" onclick="@SaveTable">Save</button> *@
+@*     <button class="btn btn-danger">Cancel</button> *@
+@* </div> *@
 
 
+<MudDialog>
+    <DialogContent>
+        <form>
+            <div class="mb-2">
+                <label class="form-label" for="name">Table Code</label>
+                <input type="text" id="name" class="form-control" @bind="model.TableNumber" />
+            </div>
+            <div class="mb-2">
+                <label class="form-label" for="desc">Descriptions</label>
+                <textarea type="text" id="desc" class="form-control" @bind="model.Description" />
+            </div>
+        </form>
+    </DialogContent>
+    <DialogActions>
+        <MudButton Variant="Variant.Filled" OnClick="Cancel">Cancel</MudButton>
+        <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="SaveTable">Save</MudButton>
+    </DialogActions>
+</MudDialog>
