--- a/MiniShopApp/Pages/Lists/Categories/CategoryIndex.razor
+++ b/MiniShopApp/Pages/Lists/Categories/CategoryIndex.razor
@@ -1,7 +1,34 @@
 ﻿@page "/categories"
-@rendermode InteractiveServer
+@inject IDialogService Dialog
 @layout MainLayout
 <PageTitle>Categories</PageTitle>
-<h3>CategoryIndex</h3>
+<div class="mt-3">
+    <div class="d-flex justify-content-between mb-2">
+        <h5>Table list</h5>
+        <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="CreateNew">Create</MudButton>
+    </div>
+    <table class="table caption-top table-bordered table-hover table-responsive">
+        <thead>
+            <tr>
+                <th>No</th>
+                <th>Category</th>
+                <th>Descriptions</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            @* @foreach (var _data in model) *@
+            @* { *@
+            @*     <tr> *@
+            @*         <th>@_data.</th> *@
+            @*         <th>@_data.TableNumber</th> *@
+            @*         <th>@_data.Description</th> *@
+            @*         <th></th> *@
+            @*     </tr> *@
+            @* } *@
+        </tbody>
+    </table>
+</div>
+
 
 
