--- a/MiniShopApp/Pages/Lists/TbTables/TableIndex.razor
+++ b/MiniShopApp/Pages/Lists/TbTables/TableIndex.razor
@@ -1,14 +1,11 @@
 ﻿@page "/table"
 
-@inject IJSRuntime JSRuntime
+@inject IDialogService Dialog
 
-
-<h3>TableIndex</h3>
-
-
-<div>
-    <div class="d-flex justify-content-end mb-2">
-        <a href="/table/create" class="btn  btn-primary">Create</a>
+<div class="mt-3">
+    <div class="d-flex justify-content-between mb-2">
+        <h5>Table list</h5>
+        <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="Createtable">Create</MudButton>
     </div>
     <table class="table caption-top table-bordered table-hover table-responsive">
         <thead>
@@ -16,6 +13,7 @@
                 <th>No</th>
                 <th>Table number</th>
                 <th>Descriptions</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -25,6 +23,7 @@
                     <th>@_data.TableId</th>
                     <th>@_data.TableNumber</th>
                     <th>@_data.Description</th>
+                    <th></th>
                 </tr>
             }
         </tbody>
